samples/_failures_safe/1761321542_eeea38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_913c6420.c: In function ‘main’:
./samples/SAFE/__tmp_913c6420.c:178:12: error: missing terminating " character
  178 |     printf("Select method (
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_913c6420.c:178:5: error: expected expression at end of input
  178 |     printf("Select method (
      |     ^~~~~~
./samples/SAFE/__tmp_913c6420.c:178:5: error: expected declaration or statement at end of input
